# web3-xrpl-defi

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: crypto-xrp-price.ipynb
xrpl_defi/: asset.py  ledger.py  robust_client.py
xrpl_defi/charts/: ohlc.py  price_chart.py
xrpl_defi/markets/: amm.py  price.py  trades.py
xrpl_defi/utils/: cache.py  log.py  notebook.py
